force-app/main/default/objects/Menu__mdt/Menu__mdt.object-meta.xml
<CustomObject>
    <label>Menu</label>
    <pluralLabel>Menu</pluralLabel>
</CustomObject>