force-app/main/default/objects/Menu__mdt/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>TextArea</type>
</CustomField>