force-app/main/default/objects/Menu__mdt/fields/List_View_Icon_Size__c.field-meta.xml
<CustomField>
    <fullName>List_View_Icon_Size__c</fullName>
    <description>Define height and width of list view Icons</description>
    <label>List View Icon Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>