force-app/main/default/objects/Menu__mdt/fields/Menu_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_Type__c</fullName>
    <label>Menu Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>