force-app/main/default/objects/Menu__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>TextArea</type>
</CustomField>