force-app/main/default/objects/Menu__mdt/fields/Sequence_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Order__c</fullName>
    <label>Sequence Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>