force-app/main/default/objects/Menu__mdt/fields/Sub_Title__c.field-meta.xml
<CustomField>
    <fullName>Sub_Title__c</fullName>
    <label>Sub Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>