force-app/main/default/objects/Menu__mdt/fields/Tab_Type__c.field-meta.xml
<CustomField>
    <fullName>Tab_Type__c</fullName>
    <label>Tab Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SObject</fullName>
                <default>true</default>
                <label>SObject</label>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>