force-app/main/default/objects/Menu__mdt/fields/Tab_Value__c.field-meta.xml
<CustomField>
    <fullName>Tab_Value__c</fullName>
    <label>Tab Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>