force-app/main/default/objects/Menu__mdt/fields/Theam_CSS__c.field-meta.xml
<CustomField>
    <fullName>Theam_CSS__c</fullName>
    <label>Theam CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>