force-app/main/default/objects/Menu__mdt/fields/Tiles_View_Icon_Size__c.field-meta.xml
<CustomField>
    <fullName>Tiles_View_Icon_Size__c</fullName>
    <description>Define height and width of Tiles Menu Icons</description>
    <label>Tiles View Icon Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>